[package]
name = "nilsmf-lib"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["serde"] }
utoipa = "4.2.0"
